fixed project titles spacing

--- a/css/index.css
+++ b/css/index.css
@@ -375,7 +375,6 @@ p {
   font-weight: bold;
   margin-bottom: 2%;
   font-family: "Quicksand", sans-serif;
-  margin-left: 5%;
   margin-top: 2%;
 }
 @media (max-width: 550px) {
