--- a/less/home-page.less
+++ b/less/home-page.less
@@ -54,7 +54,7 @@
         font-weight: bold;
         margin-bottom: 2%;
         font-family: "Quicksand", sans-serif;
-        margin-left: 5%;
+      
         margin-top: 2%;
         @media @phone {
           width: 90%;
